<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_100"
            android:orientation="vertical"
            android:weightSum="4">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <TextView
                    android:text="@string/calibration_welcome_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/welcomeHeader2" android:textSize="30sp"
                    android:textColor="@color/saDefault"
                    android:layout_marginTop="100dp" android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp" android:textAlignment="center"
                    android:hyphenationFrequency="none"/>
            <TextView
                    android:text="@string/calibration_welcome_header_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/welcomeHeader" android:textSize="30sp"
                    android:layout_marginBottom="32dp" android:textColor="@color/saDefault"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp" android:textAlignment="center"
                    android:hyphenationFrequency="none" android:visibility="visible"/>
            <TextView
                    android:text="@string/calibration_msg1"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView9" android:textSize="18sp"
                    android:paddingLeft="4dp" android:paddingRight="4dp"/>
            <TextView
                    android:text="@string/calibration_choose_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView10" android:textSize="18sp"
                    android:layout_marginTop="100dp" android:layout_marginBottom="20dp"/>

            <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
                <Button
                        android:text="@string/calibration_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/male_button" android:layout_weight="1"
                />
                <Button
                        android:text="@string/calibration_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/female_button" android:layout_weight="1"/>
            </LinearLayout>
            <TextView
                    android:text="@string/calibration_agreement"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content" android:id="@+id/textView12" android:textSize="18sp"
                    android:layout_marginTop="100dp" android:paddingLeft="4dp" android:paddingRight="4dp"/>
            <Button
                    android:text="@string/calibration_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/calibrationOK"
                    android:layout_marginTop="10dp" android:textAllCaps="false"/>


        </LinearLayout>

    </LinearLayout>
</layout>