<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_100"
            android:orientation="vertical"
            android:weightSum="4">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <TextView
                    android:text="@string/almost_there"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/enterUsernameHeader" android:textSize="30sp"
                    android:layout_marginBottom="48dp" android:textColor="@color/saDefault"
                    android:layout_marginTop="220dp"/>
            <TextView
                    android:text="@string/enter_your_name"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView9" android:textSize="18sp"
                    android:layout_marginBottom="16dp"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/UserName" android:hint="@string/first_last_name"/>
            <Button
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/next_button"
                    android:id="@+id/save_username" android:background="#3b5998"
                    android:textColor="@android:color/white" android:layout_marginTop="32dp"/>

        </LinearLayout>

    </LinearLayout>
</layout>