<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/grey_100"
              android:orientation="vertical"
              android:weightSum="4">

    <ProgressBar
            android:id="@+id/progressBar"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            style="?android:attr/progressBarStyleHorizontal"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

            <LinearLayout
                    android:id="@+id/emailPasswordFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp" android:layout_gravity="center">

                <TextView
                        android:id="@+id/titleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_and_go"
                        android:theme="@style/ThemeOverlay.MyTitleText" android:layout_marginBottom="50dp"/>
                <EditText
                        android:id="@+id/fieldEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress" android:layout_marginBottom="10dp"/>

                <EditText
                        android:id="@+id/fieldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"/>
                <TextView
                        android:id="@+id/status"
                        style="@style/ThemeOverlay.MyTextDetail"
                        android:text="@string/signed_out" android:textColor="@android:color/transparent"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/emailPasswordButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp" android:gravity="center_horizontal" android:layout_gravity="center">

                <Button
                        android:id="@+id/emailSignInButton"
                        android:layout_marginStart="@dimen/button_horizontal_margin"
                        android:layout_marginEnd="@dimen/button_horizontal_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sign_in"
                        android:theme="@style/ThemeOverlay.MyDarkButton" android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp" android:background="@color/paletteBlue"
                        android:textColor="@android:color/white"/>
                <Button
                        android:text="@string/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp" android:id="@+id/forgotPassword" android:layout_weight="1"
                        android:textColor="@android:color/holo_blue_light"
                        android:background="@android:color/transparent"
                        android:textAllCaps="false" android:layout_marginBottom="10dp"/>

                <Button
                        android:text="@string/no_account"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp" android:id="@+id/NoAccount" android:layout_weight="1"
                        android:textColor="@android:color/holo_blue_light"
                        android:background="@android:color/transparent"
                        android:textAllCaps="false"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/signedInButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:visibility="gone">

                <Button
                        android:id="@+id/signOutButton"
                        android:layout_marginStart="@dimen/button_horizontal_margin"
                        android:layout_marginEnd="@dimen/button_horizontal_margin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sign_out"
                        android:theme="@style/ThemeOverlay.MyDarkButton"/>

                <Button
                        android:id="@+id/verifyEmailButton"
                        android:layout_marginStart="@dimen/button_horizontal_margin"
                        android:layout_marginEnd="@dimen/button_horizontal_margin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/verify_email"
                        android:theme="@style/ThemeOverlay.MyDarkButton"/>

                <Button
                        android:id="@+id/reloadButton"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_marginStart="@dimen/button_horizontal_margin"
                        android:layout_marginEnd="@dimen/button_horizontal_margin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reload"
                        android:theme="@style/ThemeOverlay.MyDarkButton"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>